<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    >


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:minHeight="180dp"
        android:background="@color/gray_light"
        >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_refresh"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_try_that_again"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_font_family"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_error"
            android:textAlignment="center"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="6dp"
            android:textSize="12dp"
            android:fontFamily="@font/quicksand_font_family"
            />

    </LinearLayout>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:visibility="gone"
        android:fontFamily="@font/quicksand_font_family"
        android:textFontWeight="900"
        android:layout_marginBottom="20dp"/>

</LinearLayout>